feat(runner): enable CDP screencast for local agent and fix execution mappings