@@ -1,5 +1,6 @@
 package org.example.backend.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -13,6 +14,9 @@ import org.springframework.security.web.SecurityFilterChain;
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Value("${app.cors.allowed-origins:http://localhost:5173,http://localhost:80}")
+    private String allowedOrigins;
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
@@ -24,7 +28,7 @@ public class SecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(request -> {
                     var config = new org.springframework.web.cors.CorsConfiguration();
-                    config.setAllowedOrigins(java.util.List.of("http://localhost:5173", "http://localhost:5174", "http://localhost:5175", "http://localhost:5176"));
+                    config.setAllowedOrigins(java.util.Arrays.asList(allowedOrigins.split(",")));
                     config.setAllowedMethods(java.util.List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
                     config.setAllowedHeaders(java.util.List.of("*"));
                     config.setAllowCredentials(true);
@@ -37,7 +41,10 @@ public class SecurityConfig {
                         .requestMatchers("/api/v1/github/webhook").permitAll()
                         .requestMatchers("/api/v1/evidence/test-evidence").permitAll()
                         .requestMatchers("/internal/test-runs/**").permitAll()
+                        .requestMatchers("/internal/agent-tasks/**").permitAll()
+                        .requestMatchers("/api/v1/agent-tasks/**").permitAll()
                         .requestMatchers("/api/ws/**").permitAll()
+                        .requestMatchers("/actuator/**").permitAll()
                         .requestMatchers("/api/v1/test-cases/**").authenticated()
                         .anyRequest().authenticated()
                 );
